--- a/indexes/nsc418.md
+++ b/indexes/nsc418.md
@@ -1,60 +1,3 @@
-#### [抗共大事记：美制裁2家中企 53国加入净网(11/23-11/29)](../pages/nsc418/n12583735.md) 
-#### [【图解】川普总统遭受长达四年的攻击](../pages/nsc418/n12584029.md) 
-#### [未承认拜登当选 巴西总统：美大选存在欺诈](../pages/nsc418/n12584054.md) 
-#### [奥克兰四场圣诞游行 法轮功团体获最佳奖](../pages/nsc418/n12583250.md) 
-#### [弗林将军：针对川普的政变正在进行中](../pages/nsc418/n12583562.md) 
-#### [组图：日本民众东京集会游行 力挺川普](../pages/nsc418/n12583032.md) 
-#### [英御用律师：判决中共活摘器官罪是准确的](../pages/nsc418/n12580740.md) 
-#### [Zappos前CEO谢家华去世 年仅46岁](../pages/nsc418/n12583396.md) 
-#### [【大选更新11.29】川普拟任命特别检察官](../pages/nsc418/n12582938.md) 
-#### [对抗盖达拯救士兵 英军犬获动物界最高荣誉](../pages/nsc418/n12582865.md) 
-#### [巴西总统儿子指华为从事间谍活动 中共跳脚](../pages/nsc418/n12581980.md) 
-#### [【图解】解决大选争议的关键时间点](../pages/nsc418/n12581950.md) 
-#### [助残障者“走”出户外 加国男打造登山自行车](../pages/nsc418/n12581132.md) 
-#### [陈破空谈川普国内外成就 被攻击的深层原因](../pages/nsc418/n12581759.md) 
-#### [组图：欧洲美丽壮观的火车之旅（二）](../pages/nsc418/n12581025.md) 
-#### [孔子学院如何给西方人洗脑](../pages/nsc418/n12540938.md) 
-#### [组图：旋风尼瓦尔侵袭印度 数十万人撤离](../pages/nsc418/n12581317.md) 
-#### [中共再报复 对澳洲葡萄酒加征212%关税](../pages/nsc418/n12580442.md) 
-#### [【薇羽看世间】一场大重构和大觉醒的战争](../pages/nsc418/n12580108.md) 
-#### [美中博弈 学者：欧洲如当看客 只能做棋子](../pages/nsc418/n12580251.md) 
-#### [林郑承认现无银行户口 只能天天花现金](../pages/nsc418/n12580249.md) 
-#### [动物界首次 “世界最孤独大象”飞抵柬埔寨](../pages/nsc418/n12579081.md) 
-#### [川普考虑撤军之际 代理防长突访索马里](../pages/nsc418/n12580161.md) 
-#### [韩情报机关：金正恩封锁平壤 处决至少两人](../pages/nsc418/n12580142.md) 
-#### [【快讯】伊朗首席核武器专家被暗杀](../pages/nsc418/n12580051.md) 
-#### [组图：韩国疫情升温 连续两日新增逾500例](../pages/nsc418/n12579859.md) 
-#### [达美航空恢复飞意大利航线 落地无需隔离](../pages/nsc418/n12579884.md) 
-#### [印度防长：已授权部队 阻止中共军队单方行动](../pages/nsc418/n12579658.md) 
-#### [组图：德国疫情升温 政府将延长封锁措施](../pages/nsc418/n12579449.md) 
-#### [监管机构将取消在美上市中企的优惠待遇](../pages/nsc418/n12578381.md) 
-#### [习近平贺拜登后是否派员接触 外交部回应](../pages/nsc418/n12577875.md) 
-#### [【薇羽看世间】释放大海怪 舞弊阴谋无处遁形](../pages/nsc418/n12577819.md) 
-#### [王毅访日 中日在钓鱼岛议题上激烈交锋](../pages/nsc418/n12577720.md) 
-#### [调查：Dominion关键技术人员曾就职中国电信](../pages/nsc418/n12577751.md) 
-#### [无家可归男街边乞讨 披萨店主：给你一份工作](../pages/nsc418/n12576986.md) 
-#### [澳洲议员谴责中共对法轮功的迫害](../pages/nsc418/n12577054.md) 
-#### [爱女在韩遭酒驾撞死 嘉医主任吁连署向青瓦台提案](../pages/nsc418/n12577707.md) 
-#### [组图：中共外长王毅访韩期间遭民众抗议](../pages/nsc418/n12577089.md) 
-#### [翻越边界3米高围墙 朝鲜前体操选手投奔韩国](../pages/nsc418/n12576907.md) 
-#### [【拍案惊奇】共和党浪潮 川普曾预言国会取胜](../pages/nsc418/n12576193.md) 
-#### [组图：疫情下巴黎香榭丽舍大道圣诞点灯](../pages/nsc418/n12574608.md) 
-#### [【薇羽看世间】中共没钱了？民企收割季到来](../pages/nsc418/n12575170.md) 
-#### [阿根廷足球传奇人物马拉多纳去世](../pages/nsc418/n12575270.md) 
-#### [巴西公交与卡车相撞 至少40人死伤](../pages/nsc418/n12575269.md) 
-#### [中共窃取西方科技三种方式 学者提三个反制](../pages/nsc418/n12575015.md) 
-#### [朱利安尼：拜登反对美国优先 搞中共优先](../pages/nsc418/n12575123.md) 
-#### [10亿欧元珍宝遭窃 德国帮派三嫌犯落网](../pages/nsc418/n12573586.md) 
-#### [印度再禁43款App 包括支付宝、淘宝直播](../pages/nsc418/n12573549.md) 
-#### [【拍案惊奇】阻川普连任 揭秘全球大重构计划](../pages/nsc418/n12573524.md) 
-#### [【大选更新11.24】川普：感恩节快乐！](../pages/nsc418/n12571687.md) 
-#### [给5岁患癌童惊喜 两医生在病房里跳起芭蕾](../pages/nsc418/n12571481.md) 
-#### [Moderna：无法证明疫苗可阻止病毒传播](../pages/nsc418/n12572434.md) 
-#### [前白宫发言人：媒体问拜登 8岁孩子也能答](../pages/nsc418/n12572467.md) 
-#### [世界最深潜水池在波兰开幕 可探索水下洞穴](../pages/nsc418/n12570887.md) 
-#### [美国议员将提两党立法 制止中共活摘器官](../pages/nsc418/n12571292.md) 
-#### [【大选更新11.23】川普：相信我们会赢！](../pages/nsc418/n12569219.md) 
-#### [美国左派与媒体攻击川普 专家分析深层原因](../pages/nsc418/n12570062.md) 
-#### [阿斯利康疫苗有效率达90% 提振市场情绪](../pages/nsc418/n12569820.md) 
-#### [花钱大外宣 《中国日报》撒钱给哪些美媒](../pages/nsc418/n12569864.md) 
-#### [组图：日疫情持续升温 北海道拟对旅游管制](../pages/nsc418/n12569275.md) 
+
+### 已转移至新页面 [国际新闻](E国际新闻.md) 
+
