--- a/pages/p8/954237.md
+++ b/pages/p8/954237.md
@@ -1,4 +1,4 @@
-### 无视川普染疫美股周一强劲上扬(图)
+### 面对问题 萌发更有意义的解答(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img src="https://img3.secretchina.com/pic/2020/4-12/p2668521a498167693-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/9-12/p2774832a424033107-ss.jpg"/>
   <br>
-   纽约证券交易所。（图片来源：免费图片Shelbytyre/维基百科/CC BY SA）
+   面对问题，萌发更有意义的解答。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,67 +21,62 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月6日讯】美国
   <strong>
-   股市
+   如果有想做的事情，你为什么不去试试看？从提问产生行动，带来改变的力量
   </strong>
-  星期一（10月5日）收盘全面上扬，分析人士说，尽管
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
-   </span>
-  </strong>
-  总统感染中共病毒的消息曾对美国股市产生一定影响；但未来不会对美国的市场造成重大的长期影响。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  美国股市周一开盘后，道琼斯指数攀升了450多点，股市呈现回升趋势。上周五，川普总统确诊感染
-  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
-   中共病毒
+  编按：
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/绿藤" target="_blank">
+    绿藤
+   </span>
+  </strong>
+  的三个共同创办人郑涵睿、廖怡雯、许伟哲，在毕业后拥有顺遂的职涯发展，随着时间流逝，却觉得生活中好像少了什么，开始寻求一些改变的契机，之后有了与林碧霞博士的相处机会，他们开始用心观察日常生活的细节，对各种看似理所当然的现象提出疑问：市售洗衣精既便宜，清洁力又强，有什么不好？有没有可能，让消费者愿意多花一点钱购买品质更好的洗衣精，让厂商有足够的成本制造更好的产品？
+ </p>
+ <p>
+  以下为三位创办者如何利用提问，找到日后前进的路：
+ </p>
+ <p>
+  提问之所以重要，从来不是因为能立即找到答案，而是帮助我们发掘问题，持续的追问──为什么这样？有更好的方式吗？当我们停止责怪别人，回到自身思考“我们可以怎么做？”改变的契机也于焉而生。
+ </p>
+ <p>
+  在郑家的餐桌上，总是有一篮自己种的
+  <strong>
+   芽菜
+  </strong>
+  。吃饭时，三个年轻人忍不住好奇的问：“为什么要吃
+  <span href="https://zh.wikipedia.org/zh-tw/%E8%B1%86%E8%8A%BD">
+   芽菜
   </span>
-  (又称新冠状病毒，COVID-19)的消息，曾导致美国股市下跌。
- </p>
- <p>
-  分析人士说，周一
-  <span href="https://www.secretchina.com/news/gb/tag/股市" target="_blank">
-   股市
+  ？为什么不吃
+  <span href="https://zh.wikipedia.org/wiki/%E6%8D%B2%E5%BF%83%E8%8F%9C">
+   高丽菜
   </span>
-  强劲反弹的推动力包括川普总统健康状况正在改善的报导，以及人们对于国会与行政当局关于达成推出进一步新冠疫情经济刺激协议的前景的乐观。
+  就好？”
  </p>
  <p>
-  关注美国股市的分析人士普遍认为，随着投资者对川普总统健康状况的改善，以及对进一步财政刺激的信心增强，股市星期一才会开盘走高。
- </p>
- <p>
-  路透社的报导说，在川普总统夫妇确诊感染中共病毒之后，全球投资者正在密切观察和评估川普的健康状况如果恶化，将会如何影响未来几周的股价。许多投资者担心，距离11月3日美国总统大选投票日不到一个月，川普的健康状况如果严重下滑，可能会使美国股市的动荡不安。
- </p>
- <p>
-  贝尔德投资公司（Baird）的投资策略师威利．德尔维奇（Willie Delwiche）表示，如果总统的健康状况陷入危机，“市场存在太多不确定性，不能对此置之不理”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国新泽西州的华人投资者“视界”(笔名）对美国之音表示，尽管川普感染中共病毒的消息最初传开，对美国股市产生了瞬间的影响，但未来应不会对美国的市场造成重大的长期影响。
+  林碧霞便会娓娓述说，
+  <span href="https://www.secretchina.com/news/gb/tag/芽菜" target="_blank">
+   芽菜
+  </span>
+  是作物的幼苗，种子在发芽过程中，会产生非常丰富多元的
+  <strong>
+   营养
+  </strong>
+  素来支撑成长，因此芽菜的营养价值比一般成菜高。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,7 +91,11 @@
   </div>
  </center>
  <p>
-  “川普总统确诊感染中共病毒的消息，给美国股市带来的影响比预期的要小。川普总统在推特上宣布自己和第一夫人感染中共病毒的消息传出后，美国股市的期指曾经有过0.5%的瞬间下降；周五收盘时美国股市有0.5左右的下跌，”他说。
+  “既然芽菜
+  <span href="https://www.secretchina.com/news/gb/tag/营养" target="_blank">
+   营养
+  </span>
+  价值这么高，为什么大家很少吃？”“在外面吃饭时是不是该多点芽菜？”“外面的芽菜可不能多吃！”林碧霞赶快告诉他们，市场上许多便宜而且白白胖胖的芽菜，大多有不必要的化学添加，可能造成人体的负担。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -111,7 +110,25 @@
   </div>
  </center>
  <p>
-  不过，这位经营投资公司的分析人士说，川普总统的病情在整个周末这段时间的发展，特别是在他乘车在他住院治疗的军事医疗中心附近，向支持者致意并释放出健康状况正在好转的信息后，当晚的全球股市均受到鼓舞，美国三大股指的期指普遍上涨了0.7左右。
+  下一个问题便自然的迸出来：“芽菜这么营养，为什么不用更好的方法来种植？”在林碧霞温柔的解释中，他们才知道，许多农友采用惯行做法，可能需要花上十倍的力气才能说服他们改变，而农友也怀疑，这样种出来的菜真的会被消费者接受吗？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="图片来源：出自《B型选择 绿藤：找不到喜欢的答案，就自己创造》" src="https://img3.secretchina.com/pic/2020/11-30/p2829001a243175060-ss.jpg"/>
+  <br>
+   绿藤的三个共同创办人，由左至右依序为：廖怡雯、许伟哲、郑涵睿。（图片来源：《B型选择 绿藤：找不到喜欢的答案，就自己创造》）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +143,7 @@
   </div>
  </center>
  <p>
-  “说明市场对川普健康状况的理解，对股市的影响非常有限，”他对美国之音说。
+  每个疑问都像一把钥匙，帮助他们更深入问题的核心。知道愈多，愈能发现其中的不合理，于是再次产生疑问。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,7 +158,7 @@
   </div>
  </center>
  <p>
-  至于川普总统感染中共病毒这一事件对股市可能产生哪些影响，新泽西州的独立投资人“视界”表示，这取决于川普总统的病情发展。因为他毕竟是已经74岁的老年人，而中共病毒对老年人的伤害程度更严重。
+  当一个又一个“为什么”持续循环转动，廖怡雯心中也浮现更多的假设与可能。如果，我们不喜欢市售使用了化学添加物的芽菜，能不能自己种出更健康、更营养的芽菜，推广给消费者？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,7 +173,22 @@
   </div>
  </center>
  <p>
-  “未来48小时川普的病情恢复情况，会对股市产生一定影响。如果病情恶化，则会给股市带来一个深度的下跌，”他分析说。
+  如果，我们认为采用石化原料的洗发精、洗面乳，会造成能源消耗及环境污染，可不可以自己研发更有效但更天然的产品，提供消费者不同的选择？博士有这么多珍贵的想法与技术，我们是否可以成立一家公司，将这些技术发扬光大，串连起产品品质、消费者利益、环境永续的共好价值？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在每次的讨论之后，最终总有一句话出现在廖怡雯心中：“我们讨论了这么多可能，还有博士的技术作为后盾，为什么不动手做做看？”在这些问答的思辨中，二O一O年的春天到来了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -175,7 +207,7 @@
   </ins>
  </center>
  <p>
-  不过，这位独立投资人认为，美国总统的健康对于市场的短期影响是巨大的，尤其是对市场上的短期或阶段性投资者来说。如果美国总统的健康恶化，对于那些短期投资或者叫做投机者来说，会带来市场短期和片面的影响。
+  千万个日常疑问，最终收敛成简短而充满力量的生命问句──
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,7 +222,7 @@
   </div>
  </center>
  <p>
-  如果这种影响急剧地放大的话，会给市场制造一种海啸般的影响。至于是否造成未来的长期影响倒是未必，比如当年里根总统遇刺，并没有对股市带来长期性的影响。
+  如果我已经有想做的事情，为什么不去试试看？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -205,7 +237,7 @@
   </div>
  </center>
  <p>
-  “简单来说，如果川普总统病情恶化，会在某个时间点上给美国所有的市场，无论是股市、债券还是期货市场，都会带来很大的冲击，”他说。
+  我们要不要一起创业，做一些更有意义的事？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -220,11 +252,30 @@
   </div>
  </center>
  <p>
-  美国股市三大指数星期一都以涨势收盘，
-  <span href="https://www.secretchina.com/news/gb/tag/道琼斯" target="_blank">
-   道琼斯
-  </span>
-  指数上扬465点，涨幅为1.68%，标准普尔（S&amp;P）和纳斯达克(NASDAQ)则分别上涨了1.8%、和2.32%。
+  “永远有更好的选择”，廖怡雯、郑涵睿与许伟哲带着从林碧霞身上获得的启发，三人决定创业，让这世界上的种种问题，也能萌发更多创新而有意义的解答。
+  <br>
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   本文整理、节录自王维玲《
+   <span href="https://www.books.com.tw/products/0010876470">
+    B型选择 绿藤：找不到喜欢的答案，就自己创造
+   </span>
+   》一书，文章仅代表作者个人立场和观点。由天下文化授权转载，欲阅读完整作品，欢迎参考原书。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -256,7 +307,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -288,13 +339,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948306.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948306.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948306.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/06/948306.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954237.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954237.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954237.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/30/954237.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948306.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/954237.md' width='0px' height='0px'/>
