--- a/pages/nsc412/n12587667.md
+++ b/pages/nsc412/n12587667.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.1】川普团队向威州最高院提诉" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229697930-600x400.jpg"/>
+<div><img alt="【大选更新12.1】林伍德：美国正走向内战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/11-65-1.jpg"/>
 <div class="caption">
- 2020年11月20日，美国威斯康星州麦迪逊，戴恩县选举官员正在重新计票。(Andy Manis/Getty Images)
+ 美国知名律师林伍德说美国真走向内战，中共领导的第三方邪恶势力正在夺走美国的自由和选举。图为2020年11月5日，川普（特朗普）总统的支持者在宾夕法尼亚州府的台阶上呼吁停止该州的选票统计。(Spencer Platt/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
