--- a/pages/nsc418/n12587667.md
+++ b/pages/nsc418/n12587667.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.1】林伍德：美国正走向内战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/11-65-1.jpg"/>
+<div><img alt="【大选更新12.1】川普团队威州大规模提吿" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1286730568-600x400.jpg"/>
 <div class="caption">
- 美国知名律师林伍德说美国真走向内战，中共领导的第三方邪恶势力正在夺走美国的自由和选举。图为2020年11月5日，川普（特朗普）总统的支持者在宾夕法尼亚州府的台阶上呼吁停止该州的选票统计。(Spencer Platt/Getty Images)
+ 2020年11月3日，威斯康星州密尔沃基县（Milwaukee County）开始对11月3日的大选重新计票。(Scott Olson/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -63,6 +63,45 @@
  </ok>
  ：
 </h4>
+<h3>
+ 参议员：Dominion将6,000川普选票转给拜登
+</h3>
+<p>
+ 密歇根参议员科尔贝克（Colbeck）在听证会上谈到“软件故障”问题。该“故障”将6,000张川普（特朗普）选票转到了拜登名下。
+</p>
+<p>
+ 科尔贝克说，如果不是一名民间人士发现了这个小故障，此事就不会引起人们的注意。他因此要求对多米尼（Dominion）投票机和硬件进行司法鉴定。
+</p>
+<p>
+ 科尔贝克曾经是一名航空航天工程师。这位前州参议员出示了证据，证明密歇根底特律的多米尼投票机如何被连到互联网上。他说，该投票系统的设计旨在从事网络工作。
+</p>
+<h3>
+ 密歇根大选计票问题听证会正在进行中
+</h3>
+<p>
+ 美东时间周二（12月1日）10:15 AM，密歇根州举行选举公听会。新唐人、大纪元正在做将进行现场直播（中文同声翻译）。
+</p>
+<p>
+ 密歇根州参议院监督委员会将到场就有关选举日在底特律TCF中心现场的缺席选票计数以及随后被指为选举
+ <ok href="https://www.epochtimes.com/gb/tag/%E8%88%9E%E5%BC%8A.html">
+  舞弊
+ </ok>
+ 而展开的抗议听取证词。
+</p>
+<p>
+ 密歇根州立法机关此前发出通知，由该州众议院或参议院委派的议员举行会议，以审议和提出有关处置法案，决议和其它相关事项的建议。委员会由众议院议长或参议院多数党领袖任命。
+</p>
+<div class="video_fit_container">
+</div>
+<p>
+ 上周三（11月25日），鲍威尔（Sidney Powell）律师在密歇根提诉，要求联邦法院阻止对密歇根州选举结果的认证，并将该州州长惠特默、州务卿本森等官员列为被告。
+</p>
+<p>
+ 上周六（28日），上千民众在密歇根州首府兰辛（Lansing）市举行了“停止窃选”（Stop the Steal）集会，各界人士呼吁支持川普总统。
+</p>
+<p>
+ 至此已有三个州，包括亚利桑那州、密歇根州和宾夕法尼亚州的立法机构举行了与选举有关的听证会。宾州在上周三（11月25日）举行了听证会。
+</p>
 <h3>
  林伍德：中共10月花4亿美元收购了Dominion
 </h3>
@@ -191,11 +230,7 @@
     川普律师埃利斯：为总统服务很荣幸
    </h3>
    <p>
-    川普法律团队律师珍娜·埃利斯（Jenna Ellis）最近一直与川普律师、前纽约市长朱利安尼为与选举
-    <ok href="https://www.epochtimes.com/gb/tag/%E8%88%9E%E5%BC%8A.html">
-     舞弊
-    </ok>
-    和诈欺在努力工作。她在周二上午发文说：
+    川普法律团队律师珍娜·埃利斯（Jenna Ellis）最近一直与川普律师、前纽约市长朱利安尼为与选举舞弊和诈欺在努力工作。她在周二上午发文说：
    </p>
    <p>
     “很荣幸与鲁迪·朱利安尼（Rudy Giuliani）市长一起为唐纳德·川普总统服务。他们是英雄。”
@@ -742,6 +777,10 @@
          <p>
           责任编辑：叶紫微
          </p>
+         <div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 682px; top: 718.531px; width: 105px; height: 19px;">
+         </div>
+         <div class="jfk-bubble gtx-bubble" style="visibility: visible; left: -151px; top: 748px; opacity: 1;">
+         </div>
         </p>
        </p>
       </p>
