--- a/pages/p1/954625.md
+++ b/pages/p1/954625.md
@@ -1,4 +1,4 @@
-### 以毒攻毒 蜜蜂毒素几乎可以100%杀死癌细胞(图)
+### 胡锡进丑闻未被网管禁搜 背后两大势力互斗？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="蜜蜂 蜂毒 乳腺癌" src="https://img3.secretchina.com/pic/2020/9-10/p2772911a896813801-ss.jpg" style="height:399px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="胡锡进 丑闻 " src="https://img3.secretchina.com/pic/2020/12-4/p2831441a693200636-ss.jpg" style="height:339px; width:600px"/>
   <br>
-   研究发现，蜂毒几乎可以100%杀死乳腺癌细胞。（蜜蜂示意图/图片来源：Pixabay)
+   近日胡锡进遭下属举报他与2名女员工发生不伦恋，且已有私生子。（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,82 +21,59 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  秦鹏快评：华为7宗罪，为什么华为必须“死”？](http://141.164.51.119:10000/videos/news/qp01.html)
-
-#### [ 🔥  秦鹏快评：钟南山到底是功臣还是罪人？李文亮缺席表彰大会，网民不满！](http://141.164.51.119:10000/videos/news/qp02.html)
-
-#### [ 🔥  《走出文化亡國》第十一集 江峰走进栏目和李军一起畅谈中共逆淘汰](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月11日讯】“以毒攻毒”的说法由来已久，近日，西
+  【看中国2020年12月4日讯】（看中国记者黎小葵综合报导）官媒《环时》总编辑
   <strong>
-   澳大利亚
-  </strong>
-  大学的研究人员在Nature旗下的期刊发表论文，讲述了一项研究结果表明，
-  <strong>
-   蜜蜂蜂毒
-  </strong>
-  几乎可以100%杀死
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/乳腺癌" target="_blank">
-    乳腺癌
+   <span href="https://www.secretchina.com/news/gb/tag/胡锡进" target="_blank">
+    胡锡进
    </span>
-   细胞
   </strong>
-  。这项发现让研究人员和医学界感到相当兴奋。
+  时常发表“战狼”言论，对中共中央更是“忠心耿耿”，但近日却遭下属
+  <strong>
+   举报
+  </strong>
+  他与2名女员工发生不伦恋，还有私生子，相关消息在民间炸锅。令人疑惑的是，向来管控言论的大陆互联网，竟未对这此事进行封杀。有评论人士推测，背后或存在两大势力角逐。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据外媒报道，近日，西澳大利亚大学的研究人员在Nature旗下的期刊杂志发表一篇题为《Honeybee venom and melittin suppress growth factor receptor activation in HER2-enriched and triple-negative breast cancer》的研究论文。
- </p>
- <p>
-  这项研究调查了蜂毒以及一种名为“蜂毒素”的成分化合物，对不同类型
-  <span href="https://zh.wikipedia.org/wiki/%E4%B9%B3%E7%99%8C" target="_blank">
-   乳腺癌
+  近日传出《环时》副总编辑段静涛实名
+  <span href="https://www.secretchina.com/news/gb/tag/举报" target="_blank">
+   举报
   </span>
-  细胞的抗癌特性。研究结果表明，蜂毒能够有效诱导癌细胞死亡，特别是在侵袭性三阴性乳腺癌，以及HER2富集的乳腺癌亚型中杀伤能力接近100%，且对正常细胞影响极小。
+  胡锡进与报社员工高颖和前员工张楠伊长期保持不正当关系，2人还分别为胡锡进育有一私生子。消息一出引发哗然，胡锡进则立即出面辟谣，强调“相关指控完全是诬陷”。另一方面，胡锡进在内部要求报社相关领导向员工口头传达，不能传播他的桃色新闻。
  </p>
  <p>
-  西澳大利亚大学Peter Klinken教授表示，“这是一个令人难以置信的令人兴奋的发现，这项研究证明了
-  <span href="https://www.secretchina.com/news/gb/tag/蜂毒" target="_blank">
-   蜂毒
+  《看中国》也得到消息，中共主管网络信息办公室曾下达指令，要求严控胡锡进丑闻，各大网站只准发表胡锡进本人的回复，且尽最大力量淡化影响，也不要再对此事进行相关采访、分析等。
+ </p>
+ <p>
+  不过，大陆互联网仍能看到不少关于对胡锡进的讨论。特别是事件女主角
+  <span href="https://www.secretchina.com/news/gb/tag/张楠伊" target="_blank">
+   张楠伊
   </span>
-  素是如何干扰乳腺癌细胞内的信号通路，以减少细胞复制的，它表明自然界的化合物是可以用来治疗人类疾病的。”
+  和高颖的照片也疑似曝光。
+ </p>
+ <p style="text-align: center;">
+  <img alt="张楠伊和高颖" src="https://img3.secretchina.com/pic/2020/12-4/p2831431a891163609-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   胡锡进事件中2位女主角高颖（左）和张楠伊（右）的照片疑似曝光。（图片来源：微博）
+  </br>
  </p>
  <p>
-  研究团队发现，蜂毒可以显著地、选择性地、快速地杀伤三阴性乳腺癌细胞，和富含HER2的乳腺癌细胞。更重要的是，特定浓度的蜂毒在诱导100%的癌细胞死亡的同时，而对正常细胞的影响极小。
- </p>
- <p>
-  对此，Ciara Duffy博士表示：“这种毒液非常有效！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  值得一提的是，蜂毒素（melittin，也称蜂毒肽）是蜂毒中的有效成分，它是一种非常小的、带正电荷的多肽，而这种多肽可以通过化学合成的方式获得，并且这种合成产物与蜂毒的大部分抗癌效果相同。
+  据悉，被指与胡锡进有染的张楠伊已离职，她是原英文版负责人，曾在加拿大多伦多留学，现管理一家教育培训机构，同时担任北京师范大学家庭教育课题组的特邀研究员。
+  <span href="https://www.secretchina.com/news/gb/tag/高颖" target="_blank">
+   高颖
+  </span>
+  则鲜少露面，目前仍在《环球时报》工作。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -111,7 +88,7 @@
   </div>
  </center>
  <p>
-  实际上，早在1950年，一篇发表在Nature上的论文便报道了蜂毒可以减少植物中的肿瘤的生长。然而，尽管已经过去了数十年，蜂毒作为抗癌物质的具体分子机制和靶向性问题在很大程度上，仍然是未知的。
+  针对胡锡进性丑闻事件仍在网络上发酵，资深媒体人康仁俊猜测或存在中共高层两大势力在互斗。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +103,7 @@
   </div>
  </center>
  <p>
-  与此同时，乳腺癌（breast cancer）是一类因乳腺上皮细胞增殖失控而导致的恶性肿瘤，其发病率常年位居女性恶性肿瘤首位，所以它也被常称为“粉红杀手”。因此，开发针对乳腺癌的新疗法是十分具有意义的。
+  康仁俊13日在网络节目《94要客诉》中表示，大陆网络审查机制厉害，只要是“党”认为不好的消息都会遭封锁禁搜，胡锡进之前的战狼言论多少是有人授意让他去放话；至于举报人副总编段静涛敢实名举报胡锡进，“她会没有后台吗？”毕竟举报不实是会被定罪，且她还公开表示自己举报了胡锡进。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,7 +118,22 @@
   </div>
  </center>
  <p>
-  研究团队表示，他们将继续进一步的研究，以正式评估递送蜂毒素的最佳方法，以及毒性和最大耐受剂量。
+  康仁俊还认为，胡锡进对此事的处理态度也很“怪”，发声明却不敢直接否认，且依他与段静涛的工作关系，段的爆料是有一定可信度的，但胡事后声称段是想要总编辑的位置才乱说话，还说她“处于实际赋闲状态”，可如果段静涛没有后台，胡锡进不可能会把她留在身边，因此推测背后有两大势力在互斗。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  另外，《看中国》得到独家爆料，举报人段静涛不仅声称手握证据会向中纪委展示，且还呼吁报社中止胡锡进的工作，并进行调查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +165,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -205,13 +197,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/945666.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/945666.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/945666.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/11/945666.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954625.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954625.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954625.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/954625.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/945666.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/954625.md' width='0px' height='0px'/>
